# open5G2GO

./: .gitignore  CLA.md  CONTRIBUTING.md  DOCKER_COMPOSE_DESIGN_INDEX.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  install.sh  nginx.conf  poetry.lock.new  pyproject.toml
.github/workflows/: docker-build.yml  docs.yml
api/: README.md
config/: enodebs.yaml
daemon/: README.md
daemon/core/: __init__.py  abstract.py
daemon/core/open5gs/: __init__.py  config_generator.py  subscriber_manager.py
daemon/models/: __init__.py  schema.py
docs/: BETA_INVITE_TEMPLATE.md  mkdocs.yml
docs/docs/: api-reference.md  enodeb-setup.md  index.md  operations.md  quickstart.md  troubleshooting.md  user-guide.md
docs/issues/: ISSUE-001-ue-tracking.md  ISSUE-002-network-config-enodeb-help.md
frontend/: README.md
open5gs/: Dockerfile  entrypoint.sh  generate-certs.sh
open5gs/config/: hss.yaml  mme.yaml  pcrf.yaml  sgwc.yaml  sgwu.yaml  smf.yaml  upf.yaml
open5gs/config/freeDiameter/: hss.conf  mme.conf  pcrf.conf  smf.conf
opensurfcontrol/: __init__.py  constants.py  formatters.py  grant_history.py  mme_client.py  mongodb_client.py  parsers.py  sas_client.py  server.py  snmp_client.py
plans/: 2025-02-02-setup-workflow-public-release.md  2025-10-31-opensurfcontrol-mvp-phase1-tasks10-15.md  2025-10-31-opensurfcontrol-mvp-phase1.md  2025-12-27-docker-compose-architecture-diagrams.md  2025-12-27-docker-compose-deployment-runbook.md  2025-12-27-docker-compose-design-summary.md  2025-12-27-open5g2go-docker-compose-design.md  2025-12-27-open5g2go-implementation-plan.md  2025-12-29-distribution-implementation-milestone.md  QRTB_2.9.10_BAICELLS-MIB.txt  QRTB_2.9.10_SNMP_OID_List.xls  SESSION_STARTERS.md
plans/archive/: 2025-10-31-opensurfcontrol-design.md  2025-10-31-opensurfcontrol-mvp-phase1-tasks16-25.md  2025-10-31-opensurfcontrol-mvp-phase1-tasks16-60.md  2025-10-31-opensurfcontrol-mvp-phase1-tasks21-30.md
scripts/: preflight-check.sh  pull-and-run.sh  setup-wizard.sh  update.sh
tests/daemon/core/: test_abstract.py
tests/daemon/models/: test_schema.py
tests/opensurfcontrol/: __init__.py  test_mongodb_client.py  test_server.py
web_backend/: __init__.py  config.py  main.py
web_backend/api/: __init__.py  dependencies.py  models.py  routes.py
web_backend/services/: __init__.py  open5gs_service.py  service_monitor.py
web_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web_frontend/src/: App.tsx  main.tsx
web_frontend/src/hooks/: useSystemStatus.ts
web_frontend/src/pages/: Dashboard.tsx  NetworkConfig.tsx  Services.tsx  Subscribers.tsx
(+22 files in other folders)
