[tool.poetry]
name = "open5g2go"
version = "0.1.0"
description = "Homelab toolkit for private 4G cellular networks with Open5GS"
authors = ["Waveriders Collective <info@waveriders.io>"]
packages = [{include = "opensurfcontrol"}, {include = "web_backend"}]
readme = "README.md"

[tool.poetry.scripts]
opensurfcontrol = "opensurfcontrol.server:main"
opensurfcontrol-web = "web_backend.main:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pymongo = "^4.6.0"
pyyaml = "^6.0.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
mcp = "^1.0.0"
google-auth = "^2.25.0"  # For Google SAS API authentication
pysnmp = "^6.0.0"  # For Baicells eNodeB SNMP monitoring

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
